--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ a{color:white}
             <div class="row header-row">
                 <div class="col-md-12">
                     <nav class="navbar navbar-default">
-                        <a href="index.html"><img src="img/logo4.jpg" alt="" class="logo"></a>
+                        <a href="index.html"><img src="img/orilogo.jpg" alt="" style="padding-left:100px;" class="logo"></a>
 						
 						<p style ="font-size:15px;font-weight:800;color: #FF3300;padding-left:50px;padding-top:11px; ">Sanatan Seva Mission Trust</p>
                         <div class="container-fluid">
@@ -427,7 +427,7 @@ function cycleImages(){
     height: 60px;
 	margin-left:50px;
 	"><pre style="background:transparent;border:transparent;font-size:15px;"><b>+919720709597</b>       <b>+919528399047</b></pre></img>
-                   <h1><b>A SIMPLE HELLO COULD CHANGE MILLI0N THINGS</b></h1>
+                   <h1><b>A SIMPLE HELLO COULD CHANGE MILLION THINGS</b></h1>
                     
                 </article>
             </div>
