--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ a{color:white}
                     <nav class="navbar navbar-default">
                         <a href="index.html"><img src="img/orilogo.jpg" alt="" style="padding-left:100px;" class="logo"></a>
 						
-						<p style ="font-size:15px;font-weight:800;color: #FF3300;padding-left:50px;padding-top:11px; ">Sanatan Seva Mission Trust</p>
+						<p style ="font-size:15px;font-weight:800;color: #FF3300;padding-left:50px;padding-top:33px; ">Sanatan Seva Mission Trust</p>
                         <div class="container-fluid">
                             <!-- Brand and toggle get grouped for better mobile display -->
                             <div class="navbar-header">
@@ -167,7 +167,7 @@ function cycleImages(){
                     </div>
                 </div>
 
-                <div class="col-md-3 single-about col-xs-6 col-sm-4">
+                <div style ="margin-left:-150px;" class="col-md-3 single-about col-xs-6 col-sm-4">
                     <div class="about-inside">
                         <i class="fa fa-tint"></i>
                         <h3> BLOOD DONATION</h3>
@@ -175,18 +175,18 @@ function cycleImages(){
                     </div>
                 </div>
 
-                <div class="col-md-3 single-about col-xs-6 col-sm-4">
+                <div class="col-md-2 single-about col-xs-5 col-sm-3">
                     <div class="about-inside">
                         <i class="fa fa-paw"></i>
                         <h3>SAVE A COW</h3>
-                        <p style="color:black;">Cow is the favourite of Lord Shiv, it is said that whatever one whispers in the ears of a bull is heard by Lord Shiv and service to cow is given the highest place in the Vedas.</p>
+                        <p style="color:black;">Cow protection is the eternal dharma of India.</p>
                     </div>
                 </div>
 				 <div class="col-md-3 single-about col-xs-6 col-sm-4">
                     <div class="about-inside">
                         <i class="fa fa-heart"></i>
                         <h3>HEALTH EDUCATION</h3>
-                        <p style="color:black;">Health is like money, we never have a true idea of its value until we lose it.</p>
+                       <p style="color:black;">Health is like money, we never have a true idea of its value until we lose it.</p>
                     </div>
                 </div>
 				<div class="col-md-3 single-about col-xs-6 col-sm-4">
